k8s/overlays/prod/infrastructure/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: prod

spec:
  replicas: 1

  selector:
    matchLabels:
      app: minio

  template:
    metadata:
      labels:
        app: minio

    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: minio
          image: ghcr.io/samuelmelo98/minio:RELEASE.2025-09-07T16-13-09Z
          imagePullPolicy: IfNotPresent

          args:
            - server
            - /data
            - --console-address
            - ":9001"

          ports:
            - name: api
              containerPort: 9000

            - name: console
              containerPort: 9001

          volumeMounts:
            - name: data
              mountPath: /data

          resources:
            requests:
              cpu: 500m
              memory: 800Mi

            limits:
              cpu: "1"
              memory: 1Gi

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-data
