k8s/overlays/prod/infrastructure/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: prod

spec:
  ingressClassName: traefik

  rules:
    - host: minio.cluster.stringtecnologiadf.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000

    - host: minio-console.cluster.stringtecnologiadf.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
